Added <nav> elements
Added <nav> elements to the navigation menus in the header and footer,
and modified the css accordingly

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 
 <body>
   <header class="main-header">
-      <h1 class="name"><a href="#">Justin Galicic</a></h1>
-      <ul class="nav-list">
+    <h1 class="name"><a href="#">Justin Galicic</a></h1>
+    <nav id="header-nav-list">
+      <ul>
         <li><a href="#">HOME</a></li>
         <li><a href="#portfolio">PORTFOLIO</a></li>
         <li><a href="#skills">SKILLS</a></li>
         <li><a href="#contact">CONTACT</a></li>
       </ul>
+    </nav>
   </header>
 
   <img src="images/me.png" id="main-image" alt="Image of Justin Galicic">
@@ -123,12 +125,14 @@
             document.write(theYear)
           </script> Justin Galicic</strong></p>
     <p id="back-to-top"><strong><a href="#">BACK TO TOP</a></strong></p>
-    <ul id="footer-nav-list">
-      <li><a href="#">HOME</a></li>
-      <li><a href="#portfolio">PORTFOLIO</a></li>
-      <li><a href="#skills">SKILLS</a></li>
-      <li><a href="#contact">CONTACT</a></li>
-    </ul>
+    <nav id="footer-nav-list">
+      <ul>
+        <li><a href="#">HOME</a></li>
+        <li><a href="#portfolio">PORTFOLIO</a></li>
+        <li><a href="#skills">SKILLS</a></li>
+        <li><a href="#contact">CONTACT</a></li>
+      </ul>
+    </nav>
   </footer>
 </body>
 </html>
